<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/evaluation_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jenle.interviewapp.evaluate.view.EvaluationFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation='vertical'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/container">

        <EditText
            android:id="@+id/candidate_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/candidate_name"
            style="@style/customEditText"/>

        <EditText
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_title"
            style="@style/customEditText"
            />

        <EditText
            android:id="@+id/interviewer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/interviewer_name"
            style="@style/customEditText"
            />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/interview_date"
            style="@style/customEditText"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/communication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/communication"
            style="@style/customText"
            />

        <include layout= "@layout/ratings"/>

        <TextView
            android:id="@+id/problem_solving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problem_solving"
            style="@style/customText"
            />
        <include layout= "@layout/ratings"/>

        <TextView
            android:id="@+id/conflict_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conflict_resolution"
            style="@style/customText"
            />
        <include layout= "@layout/ratings"/>

        <TextView
            android:id="@+id/teamwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamwork"
            style="@style/customText"
            />
        <include layout= "@layout/ratings"/>

        <TextView
            android:id="@+id/work_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_experience"
            style="@style/customText"
            />
        <include layout= "@layout/ratings"/>

        <TextView
            android:id="@+id/educational_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/educational_background"
            style="@style/customText"
            />
        <include layout= "@layout/ratings"/>

        <TextView
            android:id="@+id/leadership"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leadership"
            style="@style/customText"
            />
        <include layout= "@layout/ratings"/>


        <TextView
            android:id="@+id/comments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            style="@style/customText"
            />
        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:maxLines="3"
            android:scrollbars="vertical"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
